[Nicosia] Nicosia::Animation is missing the copy assignment operator https://bugs.webkit.org/show_bug.cgi?id=201298

Reviewed by Carlos Garcia Campos.

Along with the copy constructor, the Nicosia::Animation class also
requires the copy assignment operator that's invoked whenever
the containing Nicosia::Animations object is copied across different
state objects.

Much like the constructor, the copy assignment should clone the
TimingFunction object to make it safely reusable in other contexts.
This fixes the assertion failures in debug configurations over the
improper cross-thread RefCounted usage.

* platform/graphics/nicosia/NicosiaAnimation.cpp:
(Nicosia::Animation::operator=):
* platform/graphics/nicosia/NicosiaAnimation.h:
Explicitly default the move constructor and assignment operator,
providing the whole quartet.


Canonical link: https://commits.webkit.org/214946@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249254 268f45cc-cd09-0410-ab3c-d52691b4dbfc